tweaks to prevent new fashion tweaks bleeding into cca and main show

--- a/django-verdant/rca_show/static/rca_show/css/modules.less
+++ b/django-verdant/rca_show/static/rca_show/css/modules.less
@@ -351,6 +351,8 @@
     li{
         .column(6);
         margin-bottom:@grid-gutter-width;
+        margin-right:0;
+        height:auto;
     }
     a{
         display:block;
